# Remitwise-Contracts

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DEPLOYMENT.md  README.md
.soroban/: config.toml
bill_payments/: README.md
bill_payments/src/: events.rs  lib.rs  test.rs
bill_payments/test_snapshots/: test_notification_flow.1.json
bill_payments/tests/: gas_bench.rs  test_notifications.rs
family_wallet/: Cargo.toml
family_wallet/src/: lib.rs  test.rs
family_wallet/test_snapshots/test/: test_add_and_remove_family_member.1.json  test_add_member_unauthorized.1.json  test_archive_ttl_extended_on_archive_transactions.1.json  test_check_spending_limit.1.json  test_configure_multisig.1.json  test_configure_multisig_unauthorized.1.json  test_data_persists_across_repeated_operations.1.json  test_different_thresholds_for_different_transaction_types.1.json  test_duplicate_signature_prevention.1.json  test_emergency_mode_direct_transfer_within_limits.1.json  test_emergency_transfer_cooldown_enforced.1.json  test_emergency_transfer_exceeds_limit.1.json  test_emergency_transfer_min_balance_enforced.1.json  test_init_family_wallet.1.json  test_instance_ttl_extended_on_init.1.json  test_instance_ttl_refreshed_on_add_member.1.json  (+7 more)
insurance/: README.md
insurance/src/: lib.rs  test.rs
orchestrator/: Cargo.toml
orchestrator/src/: lib.rs  test.rs
remittance_split/: README.md
remittance_split/src/: lib.rs  test.rs
remittance_split/tests/: gas_bench.rs
reporting/src/: tests.rs
savings_goals/: README.md
savings_goals/src/: lib.rs  test.rs
(+114 files in other folders)
