[workspace]
members = [
    "remittance_split",
    "savings_goals",
    "bill_payments",
    "insurance",
    "family_wallet",
]
resolver = "2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

